@@ -10,7 +10,6 @@ import org.gradle.api.Project
 import org.gradle.api.Task
 import org.gradle.api.artifacts.Configuration
 import org.gradle.api.file.ContentFilterable
-import org.gradle.api.file.FileCollection
 import org.gradle.api.file.FileCopyDetails
 import org.gradle.api.invocation.Gradle
 import org.gradle.api.tasks.SourceSet
@@ -41,7 +40,9 @@ import static org.jetbrains.plugins.gradle.tooling.builder.ModelBuildersDataProv
 @CompileStatic
 class ExternalProjectBuilderImpl extends AbstractModelBuilderService {
 
-  private static final boolean is4OrBetter = GradleVersion.current().baseVersion >= GradleVersion.version("4.0")
+  private static final GradleVersion gradleBaseVersion = GradleVersion.current().baseVersion
+  private static final boolean is4OrBetter = gradleBaseVersion >= GradleVersion.version("4.0")
+  private static final boolean is51OrBetter = is4OrBetter && gradleBaseVersion >= GradleVersion.version("5.1")
 
   static final DataProvider<Map<Project, ExternalProject>> PROJECTS_PROVIDER = new DataProvider<Map<Project, ExternalProject>>() {
     @NotNull
@@ -60,7 +61,9 @@ class ExternalProjectBuilderImpl extends AbstractModelBuilderService {
   @Override
   Object buildAll(@NotNull final String modelName, @NotNull final Project project, @NotNull ModelBuilderContext context) {
     if (project != project.rootProject) return null
-
+    if (System.properties.'idea.internal.failEsModelBuilder' as boolean) {
+      throw new RuntimeException("Boom!")
+    }
     def cache = context.getData(PROJECTS_PROVIDER)
     def tasksFactory = context.getData(TASKS_PROVIDER)
     def sourceSetFinder = new SourceSetCachedFinder(context)
@@ -77,7 +80,6 @@ class ExternalProjectBuilderImpl extends AbstractModelBuilderService {
     if (externalProject != null) return externalProject
 
     def resolveSourceSetDependencies = System.properties.'idea.resolveSourceSetDependencies' as boolean
-    def isPreview = ExternalProjectPreview.name == modelName
     DefaultExternalProject defaultExternalProject = new DefaultExternalProject()
     defaultExternalProject.externalSystemId = "GRADLE"
     defaultExternalProject.name = project.name
@@ -96,8 +98,10 @@ class ExternalProjectBuilderImpl extends AbstractModelBuilderService {
     defaultExternalProject.buildFile = project.buildFile
     defaultExternalProject.group = wrap(project.group)
     defaultExternalProject.projectDir = project.projectDir
-    defaultExternalProject.sourceSets = getSourceSets(project, isPreview, resolveSourceSetDependencies, sourceSetFinder)
+    defaultExternalProject.sourceSets = getSourceSets(project, resolveSourceSetDependencies, sourceSetFinder)
     defaultExternalProject.tasks = getTasks(project, tasksFactory)
+    defaultExternalProject.sourceCompatibility = getSourceCompatibility(project)
+    defaultExternalProject.targetCompatibility = getTargetCompatibility(project)
 
     addArtifactsData(project, defaultExternalProject)
 
@@ -122,8 +126,15 @@ class ExternalProjectBuilderImpl extends AbstractModelBuilderService {
     final List<File> artifacts = new ArrayList<File>()
     for (Jar jar : project.getTasks().withType(Jar.class)) {
       try {
-        // TODO use getArchiveFile method since Gradle 5.1
-        artifacts.add(jar.getArchivePath())
+        if (is51OrBetter) {
+          def archiveFile = jar.getArchiveFile()
+          if (archiveFile.isPresent()) {
+            artifacts.add(archiveFile.get().asFile)
+          }
+        }
+        else {
+          artifacts.add(jar.getArchivePath())
+        }
       }
       catch (e) {
         // TODO add reporting for such issues
@@ -135,8 +146,16 @@ class ExternalProjectBuilderImpl extends AbstractModelBuilderService {
     def configurationsByName = project.getConfigurations().getAsMap()
     Map<String, Set<File>> artifactsByConfiguration = new HashMap<String, Set<File>>()
     for (Map.Entry<String, Configuration> configurationEntry : configurationsByName.entrySet()) {
-      Set<File> files = configurationEntry.getValue().getArtifacts().getFiles().getFiles()
-      artifactsByConfiguration.put(configurationEntry.getKey(), new LinkedHashSet<>(files))
+      def configuration = configurationEntry.getValue()
+      try {
+        def artifactSet = configuration.getArtifacts()
+        def fileCollection = artifactSet.getFiles()
+        Set<File> files = fileCollection.getFiles()
+        artifactsByConfiguration.put(configurationEntry.getKey(), new LinkedHashSet<>(files))
+      }
+      catch (Exception e) {
+        project.getLogger().warn("warning: can not resolve artifacts of [$configuration]\n$e.message")
+      }
     }
     externalProject.setArtifactsByConfiguration(artifactsByConfiguration)
   }
@@ -169,7 +188,6 @@ class ExternalProjectBuilderImpl extends AbstractModelBuilderService {
 
   @CompileDynamic
   private static Map<String, DefaultExternalSourceSet> getSourceSets(Project project,
-                                                                     boolean isPreview,
                                                                      boolean resolveSourceSetDependencies,
                                                                      SourceSetCachedFinder sourceSetFinder) {
     final IdeaPlugin ideaPlugin = project.getPlugins().findPlugin(IdeaPlugin.class)
@@ -196,14 +214,8 @@ class ExternalProjectBuilderImpl extends AbstractModelBuilderService {
       downloadSources = ideaPluginModule.downloadSources
     }
 
-    def projectSourceCompatibility
-    def projectTargetCompatibility
-
-    def javaPluginConvention = JavaPluginUtil.getJavaPluginConvention(project)
-    if (javaPluginConvention != null) {
-      projectSourceCompatibility = javaPluginConvention.sourceCompatibility.toString()
-      projectTargetCompatibility = javaPluginConvention.targetCompatibility.toString()
-    }
+    def projectSourceCompatibility = getSourceCompatibility(project)
+    def projectTargetCompatibility = getTargetCompatibility(project)
 
     def result = [:] as Map<String, DefaultExternalSourceSet>
     def sourceSets = JavaPluginUtil.getSourceSetContainer(project)
@@ -232,6 +244,7 @@ class ExternalProjectBuilderImpl extends AbstractModelBuilderService {
       def javaCompileTask = project.tasks.findByName(sourceSet.compileJavaTaskName)
       if (javaCompileTask instanceof JavaCompile) {
         externalSourceSet.sourceCompatibility = javaCompileTask.sourceCompatibility ?: projectSourceCompatibility
+        externalSourceSet.preview = javaCompileTask.options.compilerArgs.contains("--enable-preview")
         externalSourceSet.targetCompatibility = javaCompileTask.targetCompatibility ?: projectTargetCompatibility
       }
       else {
@@ -424,7 +437,7 @@ class ExternalProjectBuilderImpl extends AbstractModelBuilderService {
       }
 
       if (resolveSourceSetDependencies) {
-        def dependencies = new DependencyResolverImpl(project, isPreview, downloadJavadoc, downloadSources, sourceSetFinder).
+        def dependencies = new DependencyResolverImpl(project, downloadJavadoc, downloadSources, sourceSetFinder).
           resolveDependencies(sourceSet)
         externalSourceSet.dependencies.addAll(dependencies)
       }
@@ -502,13 +515,18 @@ class ExternalProjectBuilderImpl extends AbstractModelBuilderService {
     result
   }
 
-  private static boolean isEmpty(FileCollection collection) {
-    try {
-      return collection.isEmpty()
-    }
-    catch (Throwable ignored) {
-    }
-    return true
+  @Nullable
+  private static String getSourceCompatibility(Project project) {
+    def javaPluginConvention = JavaPluginUtil.getJavaPluginConvention(project)
+    if (javaPluginConvention == null) return null
+    return javaPluginConvention.sourceCompatibility.toString()
+  }
+
+  @Nullable
+  private static String getTargetCompatibility(Project project) {
+    def javaPluginConvention = JavaPluginUtil.getJavaPluginConvention(project)
+    if (javaPluginConvention == null) return null
+    return javaPluginConvention.targetCompatibility.toString()
   }
 
   private static void cleanupSharedSourceFolders(Map<String, ExternalSourceSet> map) {
